# carpio21

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  env_setup.py
doc/: make.py
doc-gen/: Doxyfile
doc-gen/source/: conf.py  index.rst
doc/source/: conf.py  example.rst  index.rst
examples/: README.md
examples/1-1-1-point_position_to_segment/: CMakeLists.txt  info.cmake  main.cpp  report.rst  run.py
examples/1-1-2-segments_intersection/: CMakeLists.txt  main.cpp  multi_seg_benchmark.hpp  multi_seg_simple.hpp  multi_segments.hpp  report.rst  run.py  segment_with_name.hpp  two_segments.hpp
examples/1-1-2-segments_intersection/ben-ott/: ben_ott_structures.hpp  bentley_ottmann.cpp  bentley_ottmann.hpp  geometry.cpp  geometry.hpp  structures.hpp
examples/1-1-3-line_vs_box/: CMakeLists.txt  line_box.h  main.cpp  plane_box.h  plot.py  report.rst
examples/1-1-3-segment_vs_box/: CMakeLists.txt  main.cpp  plot.py  report.rst  run.py
examples/1-1-3-segments_intersection_benchmark/: CMakeLists.txt  main.cpp  multi_seg_benchmark.hpp  report.rst  run.py
examples/1-1-4-line_vs_box/: CMakeLists.txt  line_box.h  main.cpp  plane_box.h  plot.py  report.rst  run.py
examples/1-1-4-segment_triangle_intersection/: main.cpp
examples/1-1-5-point_in_polygon/: CMakeLists.txt  main.cpp  report.rst  run.py
examples/1-1-5-segment_triangle_intersection/: CMakeLists.txt
examples/1-1-6-affine_transformation/: affine_transform_in_2d.h  affine_transform_in_3d.h  icosahedron_ascii.ply  main.cpp  report.rst  run.py
examples/1-1-6-point_in_polygon/: CMakeLists.txt  main.cpp  report.rst
examples/1-1-7-affine_transformation/: CMakeLists.txt  affine_transform_in_2d.h  affine_transform_in_3d.h  plot.py
examples/1-1-9-polygon_partition/: CMakeLists.txt  main.cpp  plot.py  report.rst  run.py
examples/1-2-2-B_spine/: CMakeLists.txt  main.cpp  report.rst
examples/2-1-1-array_operation/: CMakeLists.txt  blas0_add_bm.hpp  main.cpp  plot.py  report.rst  run.py
examples/2-1-2-array_openmp/: CMakeLists.txt  main.cpp  report.rst  run.py
examples/2-1-3-mpi/: CMakeLists.txt  main.cpp  report.rst  run.py
examples/2-3-1-jacobi_solver/: CMakeLists.txt  main.cpp  report.rst  run.py
examples/3-1-1-structure_field_definition/: CMakeLists.txt  dim1.h  dim2.h  dim3.h  main.cpp  report.rst  run.py
examples/4-1-1-one_step_1d/: CMakeLists.txt  main.cpp  plot.py  report.rst
examples/4-1-2-gate_1d/: CMakeLists.txt  main.cpp  plot.py  report.rst
examples/4-1-3-one_step_2d/: CMakeLists.txt  main.cpp  plot.py  report.rst  run.py
examples/4-1-4-gate_2d/: CMakeLists.txt  main.cpp  plot.py  report.rst
examples/4-1-5-sine_square/: CMakeLists.txt  main.cpp  plot.py  report.rst
examples/4-1-6-semi_ellipse/: CMakeLists.txt  main.cpp  plot.py  report.rst
examples/4-1-7-rotational_one_gate/: CMakeLists.txt  main.cpp  plot.py  report.rst
examples/4-1-8-rotational_two_gates/: CMakeLists.txt  main.cpp  plot.py  report.rst
examples/4-1-9-rotational_square/: CMakeLists.txt  main.cpp  plot.py  report.rst
examples/4-2-1-one_boundary/: CMakeLists.txt  main.cpp  plot.py  report.rst  run.py
examples/4-2-2-sine_boundary_cube/: CMakeLists.txt  fd.h  fv.h  main.cpp  report.rst  run.py
examples/4-2-2-unit_sine_square/: CMakeLists.txt  main.cpp  report.rst
examples/4-2-3-unit_sine_cube/: CMakeLists.txt  main.cpp  report.rst
examples/4-2-3-unit_sine_square/: CMakeLists.txt  fd.h  fv.h  main.cpp  report.rst  run.py
examples/4-2-4-unit_sine_cube/: CMakeLists.txt  main.cpp  report.rst
examples/4-4-1-reconstruct_line/: CMakeLists.txt  line_recontruct.h  main.cpp  report.rst  run.py
examples/4-4-2-reconstruct_circle/: CMakeLists.txt  circle_reconstruct.h  main.cpp  report.rst  run.py
examples/cmake/: ExampleCommonSetup.cmake
examples/include/: convergence_analysis.hpp  example_define.hpp
examples/pytools/: data_file.py  env_para.py  matplot_predefine.py  matplot_style_test.py  path.py  rst_supplement.py  runtool.py  text_file.py  (+2 more)
include/: type_define.hpp
scripts/: plot_helper.py  plotly_helper.py
test/: CMakeLists.txt  test_define.hpp  test_gtest.cpp
test/algebra/: CMakeLists.txt  test_SIMD.cpp  test_interp.cpp  test_linear_polynomial.cpp  test_matrix_sparse.cpp  test_multi_array.cpp  test_number.cpp  test_rational.cpp  test_solver_jacobi.cpp
test/domain/: CMakeLists.txt  test_domain_frame.cpp
test/equation/: CMakeLists.txt  test_advection.cpp  test_equation_base.cpp  test_laplacian.cpp  test_laplacian_vertex.cpp  test_poisson.cpp  test_poisson_vertex.cpp
test/geometry/: CMakeLists.txt  test_aabbtree.hpp  test_affine.cpp  test_ben_ott.cpp  test_ben_ott2.cpp  test_bezier.cpp  test_boolean_polygon.cpp  test_box.cpp  test_box3.cpp  test_circle_box.cpp  test_error_area.cpp  test_intersection_eclipse.cpp  test_line_circle.cpp  test_piecewise_linear.cpp  test_point.cpp  test_point_chain.cpp  test_polygon_boolean.hpp  test_polygon_partition.cpp  test_predicate.cpp  test_seg_tri.cpp  test_segment.cpp  test_segment.hpp  test_tri_tri.cpp  test_ts.cpp  test_ts.hpp  test_voftool.hpp
test/input_files/: textfile.txt
test/input_files/mm/: cavity01_rhs1.mtx
test/input_files/segments_intersection/: case1.txt  case2.txt  case3.txt  case4.txt  case5.txt  case6.txt  case7.txt  case8.txt  case9.txt
test/io/: CMakeLists.txt  test_csv.cpp  test_gnuplot.cpp  test_plotly.cpp  test_ply.cpp  test_textfile.cpp
test/octree/: CMakeLists.txt  test_morton.cpp  test_ocell.cpp  test_octree.h  test_odata_idx.cpp  test_oghost_regular.cpp  test_ogrid.cpp  test_onode.cpp  test_oorder.cpp  test_ostringify.cpp  test_otree.cpp
test/structure/: CMakeLists.txt  test_bc_1d.cpp  test_bc_2d.cpp  test_color_function_assign.cpp  test_reconstruct_plic.cpp  test_sfield.cpp  test_sfield_face.cpp  test_sgrid.cpp  test_sgrid_io.cpp  test_sint_laplacian.cpp  test_sinterpolate.cpp  test_sorder.cpp  test_sstencil_2x2.cpp  test_su_dot_nabla.cpp  test_svector_face.cpp
test/substance/: CMakeLists.txt  test_atmosphere.cpp
test/utility/: CMakeLists.txt  test_any.cpp  test_big_int.cpp  test_clock.cpp  test_tree.cpp
(+251 files in other folders)
