cmake_minimum_required(VERSION 3.10)
project(array_openmp)

include(${CMAKE_CURRENT_LIST_DIR}/../cmake/ExampleCommonSetup.cmake)

cmake_policy(SET CMP0074 NEW)

if(CMAKE_CXX_FLAGS_RELEASE MATCHES "-O[0-3]")
    string(REPLACE "-O0" "-O3" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
    string(REPLACE "-O1" "-O3" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
    string(REPLACE "-O2" "-O3" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
else()
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
endif()

option(ENABLE_OPENMP "Enable openmp" ON)
if(ENABLE_OPENMP)
    message(STATUS "======== LOOKING FOR OPENMP ========================")
    if(APPLE)
        if(CMAKE_C_COMPILER_ID MATCHES "Clang$")
            set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp")
            set(OpenMP_C_LIB_NAMES "omp")
            set(OpenMP_omp_LIBRARY omp)
        endif()

        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang$")
            set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp")
            set(OpenMP_CXX_LIB_NAMES "omp")
            set(OpenMP_omp_LIBRARY omp)
        endif()
    endif()
    find_package(OpenMP REQUIRED)
    if(OPENMP_FOUND)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
        add_definitions(-DOPENMP)
        set(DEFAULT_OMP_THREADS 4 CACHE STRING "Default number of OpenMP threads")
        add_definitions(-DDEFAULT_OMP_THREADS=${DEFAULT_OMP_THREADS})
    endif()
endif()

carpio_setup_example(TARGET main)

if(APPLE)
    include_directories("/opt/homebrew/opt/libomp/include/")
    link_directories("/opt/homebrew/opt/libomp/lib/")
    target_link_directories(main PUBLIC "/opt/homebrew/opt/libomp/lib/")
    target_link_libraries(main PUBLIC omp)
endif()
